--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,14 +1,50 @@
 
-h1 {
-
-    text-align: center;
+*{
+    box-sizing: border-box;
 }
 
-.btn-primary{
+.jumbotron{
+    height: 150px;
+    text-align: center;
+    background-color: #800020;
+    color: whitesmoke;
+    padding: 0px;
+}
 
-    margin-top: 100px;
-    height: 50px;
-    width: 200px; 
+
+h1 {
+
+    text-align:center;
+    height: 60px;
+    margin: 0px 0px 10px;
+}
+
+body {
+
+    background-image: url("../image/82dairborne2.jpg");
     
+    height: 100%;
+    width: 100%;
 
-};
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-image: image-set();
+}
+
+
+button#loadGame{
+    margin-left: 20px;
+    margin-top: 60px;
+    background-color: #800020;
+    color: #fff;
+}
+
+#background {
+
+   /* background-image: ("../image/circles-light.png"); */
+    /*text-align: center; */
+    font-size: 16px;
+
+}
+
+
